--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -6,7 +6,7 @@
   <h1 class="title">{{section.group_name}}</h1>
 
 </ion-header-bar>
-  <ion-content overflow-scroll = "true" has-header="true" has-footer="true" padding="false">
+  <ion-content class="has-subheader" overflow-scroll = "true" has-header="true" has-footer="false" padding="false">
   	<div class="list card">
 	  <div class="item item-body">
 	    <center><p>{{question.question}} <a ng-if="question.mandatory == 'Y'">*</a></p></center>
@@ -136,7 +136,7 @@
 	  <div class="buttons">
 	    <button class="button icon-left ion-chevron-left button-clear button-positive" ng-click="prevQuestion()">Anterior</button>
 	  </div>
-	  <h1 class="title"><button class="button icon-left ion-ios-help-empty button-clear button-positive" ng-if="question.help != ''" ng-click="showAlert(question.help)"></button></h1>
+	  <h1 class="title"><button class="button  icon-left ion-ios-help button-clear button-positive" ng-if="question.help != ''" ng-click="showAlert(question.help)"></button></h1>
 	  <div class="buttons" ng-click="nextQuestion()" ng-if="question.mandatory == 'N' && (question.preg == '' || question.preg != '')">
 			<button class="button icon-right ion-chevron-right button-clear button-positive">Siguiente</button>
 	  </div>
