--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -6,7 +6,7 @@
   <h1 class="title">{{section.group_name}}</h1>
 
 </ion-header-bar>
-  <ion-content class="has-subheader" overflow-scroll = "true" has-header="true" has-footer="false" padding="false">
+  <ion-content overflow-scroll = "true" has-header="true" has-footer="false" padding="false">
   	<div class="list card">
 	  <div class="item item-body">
 	    <center><p>{{question.question}} <a ng-if="question.mandatory == 'Y'">*</a></p></center>
