--- a/www/templates/survey-volunteer-data.html
+++ b/www/templates/survey-volunteer-data.html
@@ -17,20 +17,39 @@
           <form class="css-form" novalidate name="volunteerForm">
             <div class="list card">
               <div class="item item-divider">
-              Datos del Voluntario
+              Datos del primer voluntario
               </div>
               <label class="item item-input">
-                <input type="text" placeholder="Nombre Completo" ng-model="volunteer.name" name="u1Name" required>
+                <input type="text" placeholder="Nombre Completo" ng-model="volunteers[0].name" name="u1Name" required>
                 <div ng-show="volunteerForm.$submitted || volunteerForm.u1Name.$touched">
                   <i class="icon ion-ios-close invalid" ng-show="volunteerForm.u1Name.$error.required"></i>
                   <i class="icon ion-ios-checkmark valid" ng-hide="volunteerForm.u1Name.$error.required"></i>
                 </div>
               </label>
               <label class="item item-input">
-                <input type="tel" placeholder="Teléfono" ng-model="volunteer.phone">
+                <input type="tel" placeholder="Teléfono" ng-model="volunteers[0].phone">
               </label>
               <label class="item item-input">
-                <input type="email" placeholder="Correo Electrónico" ng-model="volunteer.email" >                
+                <input type="email" placeholder="Correo Electrónico" ng-model="volunteers[0].email" >
+              </label>
+            </div>
+            <!--Second volunteer-->            
+            <div class="list card">
+              <div class="item item-divider">
+              Datos del segundo voluntario
+              </div>
+              <label class="item item-input">
+                <input type="text" placeholder="Nombre Completo" ng-model="volunteers[1].name" name="u2Name" required>
+                <div ng-show="volunteerForm.$submitted || volunteerForm.u2Name.$touched">
+                  <i class="icon ion-ios-close invalid" ng-show="volunteerForm.u2Name.$error.required"></i>
+                  <i class="icon ion-ios-checkmark valid" ng-hide="volunteerForm.u2Name.$error.required"></i>
+                </div>
+              </label>
+              <label class="item item-input">
+                <input type="tel" placeholder="Teléfono" ng-model="volunteers[1].phone">
+              </label>
+              <label class="item item-input">
+                <input type="email" placeholder="Correo Electrónico" ng-model="volunteers[1].email" >
               </label>
             </div>
             </form>
