question type date and yyyy type placeholder year

--- a/www/templates/sections-list.html
+++ b/www/templates/sections-list.html
@@ -11,7 +11,7 @@
 <ion-header-bar align-title="right" class="bar bar-subheader scroll-content">
   <center><div class="font-brown">{{count}} encuestas Llenas. </div></center>
 </ion-header-bar>
-  <ion-content overflow-scroll = "true">
+  <ion-content overflow-scroll = "true" has-header="true" has-footer="true">
   <div ng-repeat="section in sections | filter: search_section">
     <div class="list card">
       <div class="item item-icon-left stado">
