adding ej.: in placeholder of question type year

--- a/www/templates/survey-question.html
+++ b/www/templates/survey-question.html
@@ -23,7 +23,7 @@
 							</label>
 
 							<label class="item item-input" ng-if="question.type == 'D' && (question.attributes.date_format == 'yyyy')">
-								<input type="number" ng-model="question.preg" min="1950" placeholder="1950">
+								<input type="number" ng-model="question.preg" min="1950" placeholder="Ej.: 1950">
 							</label>
 
 		       	<div class="list" ng-if="question.type == 'G'">	 <!--GENDER-->
