--- a/www/templates/row-matrix.html
+++ b/www/templates/row-matrix.html
@@ -19,7 +19,8 @@
           <p class="back-gray" align="center">
             {{field.question}}
           </p>
-          <label class="item item-input" ng-if="field.type == 'S'"> <!--SIMPLE TEXT-->
+          <label class="item item-input" ng-if="field.type == 'S'
+          || (field.type != 'D' && field.type != 'G' && field.type != 'N' && field.type != 'Y' && field.type != '5' && field.type != '10' && field.type != 'T')"> <!--SIMPLE TEXT-->
             <input type="text" ng-model="field.answer">
           </label>
           <label class="item item-input" ng-if="field.type == 'D'"> <!--DATE-->
