gps fix now can be saved

--- a/www/templates/row-matrix.html
+++ b/www/templates/row-matrix.html
@@ -10,7 +10,7 @@
     </ion-header-bar>
     <ion-content>
       <div>
-        <p class="font-dark-gray back-gray" align="center">{{question.question}}</p>
+        <p class="font-dark-gray back-gray" align="center">{{question.help}}</p>
         <hr class="style-two"/>
         <p class="font-light-gray" align="center">{{row.question}}</p>
       </div>
