--- a/www/templates/init.html
+++ b/www/templates/init.html
@@ -8,10 +8,7 @@
           </center>
         <p align="center"> TECHO Guatemala</p>
         </div>
-        <div class="item item-body" ng-click="sync()" ng-if="showList != true">
-          <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>
-        </div>
-        <div class="row item item-body" ng-if="showList == true">
+        <div class="row item item-body">
           <div class="col" ng-click="sync()">
             <center><i class="icon ion-ios-cloud-download bigger-4"></i><br/>Descargar Encuesta</center>
           </div>
